@@ -1,6 +1,6 @@
 DIR   = /etc/conf.d
-FILES_NOEXIST = bootmisc clock env_whitelist hostname local.start local.stop \
-		net rc
+FILES_NOEXIST = bootmisc checkfs clock env_whitelist hostname \
+		local.start local.stop net rc
 
 TOPDIR = ..
 include $(TOPDIR)/default.mk
