@@ -70,7 +70,7 @@ iproute2_down() {
 iproute2_is_up() {
 	local check="\<UP\>" addr="${2:-false}"
 	${addr} && check="${check}.*inet "
-	[[ $(ip addr show "$1") =~ "${check}" ]]
+	[[ $(ip addr show "$1") =~ ${check} ]]
 }
 
 # bool ifconfig_has_carrier(char *iface)
@@ -102,7 +102,7 @@ iproute2_get_address() {
 #
 # Return 0 if the link is ethernet, otherwise 1.
 iproute2_is_ethernet() {
-	[[ $(ip link show "$1") =~ $'\n'"[[:space:]]*link/ether[[:space:]]*" ]]
+	[[ $(ip link show "$1") =~ $'\n'[[:space:]]*link/ether[[:space:]]* ]]
 }
 
 # void iproute2_get_mac_address(char *interface)
